--- a/app/src/main/res/layout/activity_request_peripherals.xml
+++ b/app/src/main/res/layout/activity_request_peripherals.xml
@@ -32,14 +32,16 @@
         </RelativeLayout>
 
         <EditText
-            android:visibility="gone"
+            android:layout_marginRight="3dp"
+            android:layout_marginLeft="3dp"
             android:id="@+id/purpose"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@drawable/style_edittext"
             android:ellipsize="end"
             android:hint="Other Purpose..."
             android:maxLines="1"
+            android:maxLength="80"
             android:padding="5dp"/>
     </LinearLayout>
 
