--- a/app/src/main/res/layout/request_peripherals_items.xml
+++ b/app/src/main/res/layout/request_peripherals_items.xml
@@ -1,72 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:background="@color/white"
+    android:orientation="horizontal"
     android:padding="5dp"
-    android:background="@color/white">
+    android:weightSum="3">
 
-    <TextView
-        android:id="@+id/txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:text="Unit: "
-        android:paddingTop="3dp"/>
-    <EditText
-        android:padding="2dp"
-        android:layout_alignParentTop="true"
-        android:id="@+id/unit"
-        android:layout_toRightOf="@id/txt"
-        android:background="@drawable/style_edittext"
-        android:layout_width="70dp"
-        android:layout_height="25dp" />
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/remove"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:src="@drawable/ic_remove"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"/>
+        <TextView
+            android:id="@+id/txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="3dp"
+            android:text="Unit: " />
 
-    <TextView
-        android:textSize="15dp"
-        android:layout_below="@id/remove"
-        android:id="@+id/peripheral"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:text="TextView"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="3dp"/>
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/qty"
-        android:layout_below="@id/remove"
-        android:text="Qty:  "/>
+        <EditText
+            android:id="@+id/unit"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:background="@drawable/style_edittext"
+            android:padding="2dp" />
+    </LinearLayout>
 
-    <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="5dp"
-        android:layout_below="@id/remove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/qty"
-        app:snp_buttonIconLeft="@drawable/ic_minus_icon"
-        app:snp_buttonIconRight="@drawable/ic_add_icon"
-        app:snp_buttonPaddingLeft="5dp"
-        app:snp_buttonPaddingRight="5dp"
-        app:snp_maxValue="20"
-        app:snp_minValue="0"
-        app:snp_value="1"
-        app:snp_stepSize="1"
-        app:snp_updateInterval="10">
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    </com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker>
+        <TextView
+            android:id="@+id/peripheral"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:maxLines="2"
+            android:textAlignment="center"
+            android:textSize="15dp" />
 
-</RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_gravity="right"
+            android:id="@+id/remove"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/ic_remove" />
+
+        <LinearLayout
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/remove"
+                android:layout_marginTop="5dp"
+                android:text="Qty:  " />
+
+            <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
+                android:id="@+id/qty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/remove"
+                android:layout_marginTop="5dp"
+                app:snp_buttonIconLeft="@drawable/ic_minus_icon"
+                app:snp_buttonIconRight="@drawable/ic_add_icon"
+                app:snp_buttonPaddingLeft="5dp"
+                app:snp_buttonPaddingRight="5dp"
+                app:snp_maxValue="20"
+                app:snp_minValue="0"
+                app:snp_stepSize="1"
+                app:snp_updateInterval="10"
+                app:snp_value="1">
+
+            </com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
